# bellona

./: .env.example  .env.test.example  .gitignore  CLAUDE.md  DESIGN.md  README.md  SPEC.md  companies.csv  justfile  pyproject.toml  pytest.ini
.github/workflows/: tests.yaml
alembic/: env.py
alembic/versions/: 0302c0057ecc_add_agent_proposals.py  f968e8a293ce_initial_schema.py
src/bellona/: __init__.py  main.py
templates/: 404.html  base.html
templates/connectors/: _discover_result.html  _jobs_table.html  _jobs_with_sync.html  _pipeline_sync.html  detail.html  index.html
templates/explorer/: index.html
templates/graph/: index.html
templates/ontology/: entity_type.html  index.html  relationships.html
templates/proposals/: index.html
templates/query/: index.html
tests/: conftest.py
tests/api/: conftest.py
tests/integration/: conftest.py  test_agent_service.py  test_agents.py  test_connector_pipeline.py  test_connectors.py  test_delete.py  test_discovery_api.py  test_discovery_service.py  test_entities.py  test_full_pipeline.py  test_ingestion.py  test_query.py  test_relationship_service.py  test_relationship_types.py  test_ui_connectors.py  test_ui_explorer.py  test_ui_graph.py  test_ui_ontology.py  test_ui_proposals.py  test_ui_query.py
tests/live/: test_live_agents.py  test_live_discovery.py  test_query_agent_live.py
tests/ontology/: test_validator.py
tests/unit/: test_csv_connector.py  test_discovery_agent.py  test_discovery_tools.py  test_mapper_agent.py  test_normalize_filters.py  test_quality_agent.py  test_query_agent.py  (+5 more)
(+47 files in other folders)
