[project]
name = "bellona"
version = "0.1.0"
description = "A universal data ontology platform"
readme = "README.md"
authors = [
    { name = "JW Jacobson", email = "116485484+jwjacobson@users.noreply.github.com" }
]
requires-python = ">=3.14"
dependencies = [
    "alembic>=1.18.4",
    "fastapi[standard]>=0.135.1",
    "pydantic>=2.12.5",
    "sqlalchemy>=2.0.48",
]

[project.scripts]

[dependency-groups]
dev = [
    "coverage>=7.13.4",
    "pytest>=9.0.2",
]

