[project]
name = "bellona"
version = "0.1.0"
description = "A universal data ontology platform"
readme = "README.md"
authors = [
    { name = "JW Jacobson", email = "116485484+jwjacobson@users.noreply.github.com" }
]
requires-python = ">=3.14"
dependencies = [
    "alembic>=1.18.4",
    "asyncpg>=0.31.0",
    "chardet>=5.2.0",
    "fastapi[standard]>=0.135.1",
    "httpx>=0.28.1",
    "jsonpath-ng>=1.6.0",
    "psycopg2-binary>=2.9.11",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.13.1",
    "sqlalchemy>=2.0.48",
    "structlog>=25.5.0",
]

[dependency-groups]
dev = [
    "coverage>=7.13.4",
    "httpx>=0.28.1",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
    "pytest-env>=1.5.0",
]

